--- a/package.json
+++ b/package.json
@@ -3,7 +3,12 @@
   "version": "1.0.0",
   "description": "another url shortener",
   "main": "index.js",
+  "private": true,
+  "workspaces": [
+    "app"
+  ],
   "scripts": {
+    "dev:app": "npm run dev --workspace app",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
