--- a/api/package.json
+++ b/api/package.json
@@ -22,6 +22,7 @@
     "vitest": "^3.1.1"
   },
   "dependencies": {
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "nanoid": "^5.1.5"
   }
 }
