--- a/api/package.json
+++ b/api/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.1",
     "@types/node": "^22.14.1",
     "@types/supertest": "^6.0.3",
@@ -22,6 +23,7 @@
     "vitest": "^3.1.1"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^5.1.0",
     "nanoid": "^5.1.5"
   }
